# jackguitar

./: Makefile  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in
CVS/: Entries  Repository
src/: .vimrc  Makefile  Makefile.am  Makefile.in  fftgraph.c  fftgraph.h  fretboard.c  fretboard.h  jack_client.c  jack_client.h  jackguitar  main.c  scales.c  scales.h
src/.deps/: jackguitar-fftgraph.Po  jackguitar-fretboard.Po  jackguitar-jack_client.Po  jackguitar-main.Po  jackguitar-scales.Po
src/CVS/: Entries  Repository  Root
